# MSCEqF

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  camera_8hpp_source.html  checker_8hpp_source.html  class_m_s_c_eq_f_ros-members.html  class_m_s_c_eq_f_ros.html  class_m_s_c_eq_f_ros.js  classes.html  classmsceqf_1_1_checker-members.html  classmsceqf_1_1_checker.html  classmsceqf_1_1_checker.js  classmsceqf_1_1_m_s_c_eq_f-members.html  classmsceqf_1_1_m_s_c_eq_f.html  classmsceqf_1_1_m_s_c_eq_f.js  classmsceqf_1_1_m_s_c_eq_f_a2287aa91e58c6190cd94aeacedfe9c7d_icgraph.map  classmsceqf_1_1_m_s_c_eq_f_a2287aa91e58c6190cd94aeacedfe9c7d_icgraph.md5  classmsceqf_1_1_m_s_c_eq_f_a3d7135418997539dcb59078c592f8c5e_cgraph.map  classmsceqf_1_1_m_s_c_eq_f_a3d7135418997539dcb59078c592f8c5e_cgraph.md5  classmsceqf_1_1_m_s_c_eq_f_state-members.html  classmsceqf_1_1_m_s_c_eq_f_state.html  classmsceqf_1_1_m_s_c_eq_f_state.js  classmsceqf_1_1_m_s_c_eq_f_state_a2ed5779e4d4df55eb0a3be4f6f6375b4_cgraph.map  classmsceqf_1_1_m_s_c_eq_f_state_a2ed5779e4d4df55eb0a3be4f6f6375b4_cgraph.md5  classmsceqf_1_1_m_s_c_eq_f_state_a3cb9682d076eae9b1463a2dbdaa5d2f4_cgraph.map  classmsceqf_1_1_m_s_c_eq_f_state_a3cb9682d076eae9b1463a2dbdaa5d2f4_cgraph.md5  classmsceqf_1_1_m_s_c_eq_f_state_a587407b4418bb38c79ed0ca0c63254ac_cgraph.map  classmsceqf_1_1_m_s_c_eq_f_state_a587407b4418bb38c79ed0ca0c63254ac_cgraph.md5  classmsceqf_1_1_m_s_c_eq_f_state_a5e24084e77a9ff5469afe48e17db7c9b_icgraph.map  classmsceqf_1_1_m_s_c_eq_f_state_a5e24084e77a9ff5469afe48e17db7c9b_icgraph.md5  classmsceqf_1_1_m_s_c_eq_f_state_element-members.html  classmsceqf_1_1_m_s_c_eq_f_state_element.html  classmsceqf_1_1_m_s_c_eq_f_state_element.js  classmsceqf_1_1_m_s_c_eq_f_state_element__inherit__graph.map  classmsceqf_1_1_m_s_c_eq_f_state_element__inherit__graph.md5  classmsceqf_1_1_option_parser-members.html  (+459 more)
.github/workflows/: doxygen.yml
cmake/: native.cmake
config/: parameters.yaml  parameters_missing_1.yaml  parameters_missing_2.yaml  parameters_missing_3.yaml
docker/: Dockerfile_ros1  Dockerfile_ros2
examples/euroc/: config.yaml  euroc.cpp
examples/euroc/config/: config.yaml
examples/euroc/results/: V1_01_easy.csv
examples/syntetic/: config.yaml  syntetic.cpp
examples/synthetic/: synthetic.cpp
examples/synthetic/config/: config.yaml
examples/synthetic/data/: trajectory_gt.csv  trajectory_imu.csv
examples/synthetic/results/: synthetic_long_init_time.csv  synthetic_outliers_40.csv  synthetic_short_init_time.csv
examples/synthetic_images/: synthetic_images.cpp
examples/synthetic_images/config/: config.yaml
examples/uzhfpv/: uzhfpv.cpp
examples/uzhfpv/config/: config.yaml
examples/uzhfpv/results/: indoor_forward_3.csv
include/groups/: In.hpp  SDB.hpp  SEn3.hpp  SO3.hpp  SOT3.hpp  TG.hpp
include/msceqf/: fptype.hpp  msceqf.hpp  msceqf_options.hpp
include/msceqf/filter/: propagator.hpp
include/msceqf/filter/checker/: checker.hpp
include/msceqf/filter/initializer/: static_initializer.hpp
include/msceqf/filter/propagator/: propagator.hpp
include/msceqf/filter/updater/: updater.hpp  updater_helper.hpp  zero_velocity_updater.hpp
include/msceqf/options/: msceqf_option_parser.hpp  msceqf_options.hpp
include/msceqf/state/: state.hpp  state_elements.hpp
include/msceqf/symmetry/: symmetry.hpp
include/msceqf/system/: sensor_data.hpp  system.hpp  system_elements.hpp
include/msceqf/vision/: camera.hpp  feature.hpp  features.hpp  track.hpp  track_manager.hpp  tracker.hpp
include/sensors/: sensor_data.hpp
include/types/: fptypes.hpp
include/utils/: csv_parser.hpp  data_parser.hpp  data_writer.hpp  logger.hpp  syntetic_data_parser.hpp  tools.hpp  utils.hpp  visualizer.hpp
include/vision/: camera.hpp  features.hpp  track.hpp  track_manager.hpp  tracker.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  (+71 more)
source/msceqf/: msceqf.cpp
source/msceqf/filter/: propagator.cpp
source/msceqf/filter/checker/: checker.cpp
source/msceqf/filter/initializer/: static_initializer.cpp
source/msceqf/filter/propagator/: propagator.cpp
source/msceqf/filter/updater/: updater.cpp  updater_helper.cpp  zero_velocity_updater.cpp
source/msceqf/options/: msceqf_option_parser.cpp
source/msceqf/state/: state.cpp
source/msceqf/symmetry/: symmetry.cpp
source/msceqf/system/: system.cpp
source/msceqf/vision/: camera.cpp  track.cpp  track_manager.cpp  tracker.cpp
source/utils/: logger.cpp
source/vision/: camera.cpp  track_manager.cpp  tracker.cpp
tests/: test_common.hpp  test_feature_detection.hpp  test_feature_tracking.hpp  test_groups.hpp  test_imu_readings_selection.hpp  test_msceqf.hpp  test_params.hpp  test_state.hpp  test_symmetry.hpp  tests.cpp
tests/config/: parameters.yaml
wrappers/ros/ros1/: package.xml
wrappers/ros/ros1/cmake/: ros1.cmake
wrappers/ros/ros1/config/: comp.rviz  r15.yaml  rviz.rviz  template.yaml
wrappers/ros/ros1/include/: msceqf_ros.hpp
wrappers/ros/ros1/launch/: msceqf.launch
wrappers/ros/ros1/source/: msceqf_ros.cpp  msceqf_ros_node.cpp  msceqf_ros_serial.cpp
wrappers/ros/ros2/cmake/: ros2.cmake
wrappers/ros/ros2/include/: msceqf_ros.hpp
wrappers/ros/ros2/source/: msceqf_ros.cpp  msceqf_ros_node.cpp
